--- a/DockerFile
+++ b/DockerFile
@@ -1,5 +1,6 @@
 
 FROM ubuntu:latest
 RUN apt-get update && apt-get install python3-pip -y
-ADD HelloWorld.py HelloWorld.py
-CMD python3 HelloWorld.py
+ADD prog.py prog.py
+ADD calc.py calc.py
+CMD python3 prog.py
